<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign_up">

    <EditText
        android:id="@+id/emailAddressET"
        android:layout_width="291dp"
        android:layout_height="50dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/textview_border"
        android:ems="10"
        android:hint="@string/enter_your_email_id"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/password"
        android:layout_width="291dp"
        android:layout_height="50dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/textview_border"
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/secretCode"
        android:layout_width="291dp"
        android:layout_height="50dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/textview_border"
        android:ems="10"
        android:hint="@string/enter_your_code"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="208dp"
        android:layout_height="23dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="100dp"
        android:text="@string/already_have_an_account"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="100dp"
        android:text="@string/sign_in"
        android:textColor="@color/coloraccent"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="52dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="300dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:text="@string/secret_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="335dp"
        android:layout_height="37dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="12dp"
        android:text="@string/by_clicking_the_quot_sign_up_quot_button_you_are_creating_an_account_and_you_agree_to_quot_terms_of_use_quot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="269dp"
        android:layout_height="44dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="580dp"
        android:text="@string/sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>